--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>EMOJI MOOD BOARD</h1>
     <div class="top-section">
-        <div class="emoji-display" id="selected-emoji">😊</div>
+        <div class="emoji-display" id="selected-emoji"></div>
         <div class="history">
             <h2>HISTORY</h2>
             <table id="emoji-history">
@@ -43,7 +43,22 @@
             <span>😡</span>
             <button onclick="selectEmoji('😡')">Select</button>
         </div>
-        <!-- Add more emoji items here to make up to 12 emojis -->
+        <div class="emoji-item">
+            <span>😲</span>
+            <button onclick="selectEmoji('😲')">Select</button>
+        </div>
+        <div class="emoji-item">
+            <span>😍</span>
+            <button onclick="selectEmoji('😍')">Select</button>
+        </div>
+        <div class="emoji-item">
+            <span>😎</span>
+            <button onclick="selectEmoji('😎')">Select</button>
+        </div>
+        <div class="emoji-item">
+            <span>🤩</span>
+            <button onclick="selectEmoji('🤩')">Select</button>
+        </div>
     </div>
     <div class="bottom-section">
         <button class="submit-btn" onclick="submitEmojis()">Submit ✔️</button>
